--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 	<br>
+	<a href="https://shane9337.github.io/123/">表格</a>
+	<br>
 	<a href="https://shane9337.github.io/NINE/.">九九乘法表</a>
-
 	<br>
 	<a href="https://shane9337.github.io/HOMEWORK/">DIV排版</a>
 
